--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,26 +13,30 @@
 <!DOCTYPE html>
 <html>
 <head>
+        <meta charset="UTF-8">
 	<title>{% block title %}Esperluette{% endblock %}</title>
-</head>
 
 {% block stylesheets %}
-<!-- bootstrap Style CSS File -->
+{#<!-- bootstrap Style CSS File -->#}
 <link rel="stylesheet" href="{{ asset('build/css/bootstrap.min.css') }}">
-<!-- Custom Style CSS File -->
-<link rel="stylesheet" type="text/css" href="{{ asset('build/css/custom-style.css') }}">
-<!-- Font-Awesome Style CSS File -->
+{#<!-- Font-Awesome Style CSS File -->#}
 <link rel="stylesheet" type="text/css" href="{{ asset('build/font-awesome/css/font-awesome.min.css') }}">
 {% endblock %}
+{% block style %}
+    {#<!-- Custom Style CSS File -->#}
+    <link rel="stylesheet" type="text/css" href="{{ asset('build/css/custom-style.css') }}">
+{% endblock %}
+</head>
 
-
+{% block body %}
 <body>
-{#{% block body %}#}
-<!-- Top navigation -->
+
+
 <nav class="navbar navbar-expand-md fixed-top top-nav">
 	<div class="container">
 		  <a class="navbar-brand" href="index.html"><strong>Esperluette</strong></a>
 		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+
 		    <span class="navbar-toggler-icon"><i class="fa fa-bars" aria-hidden="true"></i></span>
 		  </button>
 
@@ -64,7 +68,7 @@
 	</div>
 </nav>
 
-<!-- Intro Seven -->
+{#<!-- Intro Seven -->#}
 <section class="intro carousel slide bg-overlay-light h-auto" id="carouselExampleCaptions">
     <ol class="carousel-indicators">
       <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
@@ -98,7 +102,7 @@
     </a>
 </section>
 
-<!-- Info block 1 -->
+{#<!-- Info block 1 -->#}
 <section class="info-section">
 	<div class="container">
 		<div class="head-box text-center mb-5">
@@ -154,7 +158,7 @@
 	</div>
 </section>
 
-<!-- Info block 1 -->
+{#<!-- Info block 1 -->#}
 <section class="info-section bg-primary py-0">
 	<div class="container-fluid">
 		<div class="row">
@@ -193,7 +197,7 @@
         </div>
 </section>
 
-<!-- team style 1 -->
+{#<!-- team style 1 -->#}
 <section class="team-section py-5">
 	<div class="container">
 		<div class="row mb-5">
@@ -247,7 +251,7 @@
 	</div>
 </section>
 
-<!-- Widget 1 -->
+{#<!-- Widget 1 -->#}
 <section class="widget py-3 bg-primary">
 		<div class="container">
 			<div class="row">
@@ -264,7 +268,7 @@
 		</div>
 </section>
 
-<!-- Testimonial Block 04-->
+{#<!-- Testimonial Block 04-->#}
 <section class="testimonial-section py-5">
 	<div class="container">
 		<div class="row">
@@ -328,7 +332,7 @@
 </section>
 
 
-<!-- Info block 6 -->
+{#<!-- Info block 6 -->#}
 <section class="info-section bg-light py-4">
 	<div class="container">
 		<div class="three-panel-block text-dark">
@@ -359,7 +363,7 @@
 	</div>
 </section>
 
-<!-- Footer Block 1 -->
+{#<!-- Footer Block 1 -->#}
 <section class="footer-section bg-dark pt-5">
 	<div class="container pb-3">
 		<div class="row">
@@ -424,12 +428,13 @@
 	</div>
 </section>
 
-<!-- Javascript Files  -->
-{#{% block js %}#}
+{% block javascripts %}
+{#<!-- Javascript Files  -->#}
 <script  src="http://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script src="{{ asset('build/js/bootstrap.min.js') }}"></script>
 <script src="{{ asset('build/js/core.js') }}"></script>
-{#{% endblock %}#}
+{% endblock %}
+{% endblock %}
 </body>
-{#{% endblock %}#}
+
 </html>
