--- a/templates/forum/index.html.twig
+++ b/templates/forum/index.html.twig
@@ -1,20 +1,118 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Hello {{ controller_name }}!{% endblock %}
+{% block style %}
+    {{ parent() }}
+
+<link rel="stylesheet" href="{{ asset('build/css/forum-style.css') }}">
+{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+    <nav class="navbar navbar-expand-md top-nav" style="background-color: darkblue">
+	<div class="container">
+		  <a class="navbar-brand" href="index.html"><strong>Esperluette</strong></a>
+		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+		    <span class="navbar-toggler-icon"><i class="fa fa-bars" aria-hidden="true"></i></span>
+		  </button>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'src/Controller/ForumController.php'|file_link(0) }}">src/Controller/ForumController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'templates/forum/index.html.twig'|file_link(0) }}">templates/forum/index.html.twig</a></code></li>
-    </ul>
-</div>
+		  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+		    <ul class="navbar-nav ml-auto">
+		      <li class="nav-item active">
+		        <a class="nav-link" href="{{ path('home')}}">Accueil <span class="sr-only">(current)</span></a>
+		      </li>
+		      <li class="nav-item">
+		        <a class="nav-link" href="about.html">About</a>
+		      </li>
+		      <li class="nav-item">
+		        <a class="nav-link" href="services.html">Services</a>
+		      </li>
+		      <li class="nav-item">
+		        <a class="nav-link" href="team.html">Team</a>
+		      </li>
+		      <li class="nav-item">
+		        <a class="nav-link" href="price.html">Prices</a>
+		      </li>
+		      <li class="nav-item">
+		        <a class="nav-link" href="faq.html">FAQ's</a>
+		      </li>
+		      <li class="nav-item">
+		        <a class="nav-link" href="contact.html">Contact</a>
+		      </li>
+		    </ul>
+		  </div>	
+	</div>
+</nav>
+    <div class="container btnForum">
+        <div class="d-flex justify-content-center">
+    <div class="btn-pref btn-group btn-group-justified btn-group-lg" role="group" aria-label="...">
+        <div class="btn-group" role="group">
+            <button type="button" id="#tabGeneral" class="btn btn-primary" href="#tabGeneral" data-toggle="tab"><span class="glyphicon glyphicon-star" aria-hidden="true"></span>
+                <div class="hidden-xs">Général</div>
+            </button>
+        </div>
+        <div class="btn-group" role="group">
+            <button type="button" id="#tabEpicerie" class="btn btn-default" href="#tabEpicerie" data-toggle="tab"><span class="glyphicon glyphicon-heart" aria-hidden="true"></span>
+                <div class="hidden-xs">Epicerie</div>
+            </button>
+        </div>
+        <div class="btn-group" role="group">
+            <button type="button" id="#tabBar" class="btn btn-default" href="#tabBar" data-toggle="tab"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+                <div class="hidden-xs">Bar</div>
+            </button>
+        </div>
+        <div class="btn-group" role="group">
+            <button type="button" id="#tabRestaurant" class="btn btn-default" href="#tabRestaurant" data-toggle="tab"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+                <div class="hidden-xs">Restaurant</div>
+            </button>
+        </div>
+    </div>
+        </div>
+
+    </div>
+    <div class="container-fluid hidden" id="tabForum">
+        <div class="forumContent hidden" id="tabGeneral">
+            <div class="sujetForum mt-2"><h4>Premiere partie</h4></div>
+            <div class="row">
+      <div class="col-md-3">
+         <div class="card flex-md-row mb-3 shadow-sm h-md-250">
+            <div class="card-body d-flex flex-column align-items-start">
+                <h4><strong class="d-inline-block mb-2 text-primary">World</strong></h4>
+               <h6 class="mb-0">
+                  <a class="text-dark" href="#">Par auteur</a>
+               </h6>
+               <div class="mb-1 text-muted small">Nov 12</div>
+               <p class="card-text mb-auto paragraphCard">This is a wider card with supporting text below as a natural lead-in to additional conazdazdazdadazdazddazdzadazdzadazdazddazdazdazdazdazdazdazdazdzdzadazdtent.</p>
+               <a class="btn btn-outline-primary btn-sm" role="button" href="http://www.jquery2dotnet.com/">Continue reading</a>
+            </div>
+         </div>
+      </div>
+      <div class="col-md-3">
+         <div class="card flex-md-row mb-3 shadow-sm h-md-250" style=" max-height: 200px; text-overflow: ellipsis;">
+            <div class="card-body d-flex flex-column align-items-start">
+                <h4><strong class="d-inline-block mb-2 text-primary">World</strong></h4>
+               <h6 class="mb-0">
+                  <a class="text-dark" href="#">Par auteur</a>
+               </h6>
+               <div class="mb-1 text-muted small">Nov 12</div>
+               <p class="card-text mb-auto paragraphCard">This is a wider card with supporting text below as a natural lead-in to additional conazdazdazdadazdazddazdzadazdzadazdazddazdazdazdazdazdazdazdazdzdzadazdtent.</p>
+               <a class="btn btn-outline-primary btn-sm" role="button" href="http://www.jquery2dotnet.com/">Continue reading</a>
+            </div>
+         </div>
+      </div>
+
+      
+      </div>
+
+{#    Fin du content general     #}
+   </div>
+
+        <div class="forumContent hidden" id="tabEpicerie">CECI EST MON EPICERIE</div>
+        <div class="forumContent hidden" id="tabBar">CECI EST MON BAR</div>
+        <div class="forumContent hidden" id="tabRestaurant">CECI EST MON RESTAURANT</div>
+{#  Fin des tabs du forum  #}
+    </div>
+
+<script src="{{ asset('build/js/jquery-3.3.1.js') }}"></script>
+<script src="{{ asset('build/js/forum.js') }}"></script>
 {% endblock %}
