--- a/templates/forum/sujet.html.twig
+++ b/templates/forum/sujet.html.twig
@@ -41,53 +41,24 @@ Forum
       <div class="row">
 
         <!-- Blog Entries Column -->
-        <div class="col-md-8" id="tabForum">
-            
-                    {% for theme in themes %}
-            <div class="forumContent hidden my-4" id="tab{{ theme.theme }}">
-                <table class="table table-striped table-bordered">
-                    <thead class="thead-light">
-                        <tr>
-                            <td>Titre</td>
-                            <td>Auteur</td>
-                            <td>Date de publication</td>
-                        </tr>
-                    </thead>
-                {% for sujet in theme.sujets %}
-                    <tr id="{{ sujet.id }}">
-                        <td>{{ sujet.intitule }}</td><td>{{ sujet.auteur.nom }} {{ sujet.auteur.prenom}}</td><td>{{sujet.dateCreation|date("d/m/Y") }}</td>
-                    </tr>
-                {% endfor %}  
-                </table>
-            </div>
-        {% endfor %}  
-            
-{#          <table>
-            {% for theme in themes %}
-              {% for sujet in theme.sujets %}
-              <tr>
-                <td>{{ sujet.intitule}}</td><td>{{ sujet.auteur.nom }}</td><td>{{sujet.dateCreation|date("m/d/Y") }}</td>
-              </tr>
-              {% endfor %}
+        <div class="col-md-8 my-4" id="tabForum">
+            {% for message in sujet.messages %}
+                <div class="card mb-2">
+                    <div class="card-body">
+                        <div class="card-title cardMessage">
+                            <span class="card-title nomPrenomMessage"><strong>{{ message.auteur.prenom }} {{ message.auteur.nom }}</strong></span><span class="float-right">{{ message.dateCreation|date("d/m/Y  H:i:s")}}</span>
+                        </div><hr>
+                    <p class="card-text">{{ message.corps}}</p>
+                    </div>
+                </div>
             {% endfor %}
-          </table>#}
-          
-
-          <!-- Blog Post -->
-{#          <div class="card mb-3">
-            <img class="card-img-top" src="http://placehold.it/250x100" alt="Card image cap">
-            <div class="card-body">
-              <h2 class="card-title">Post Title</h2>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus possimus, veniam magni quis!</p>
-              <a href="#" class="btn btn-primary">Read More &rarr;</a>
-            </div>
-            <div class="card-footer text-muted">
-              Posted on January 1, 2017 by
-              <a href="#">Start Bootstrap</a>
-            </div>
-          </div>#}
-
-
+            <hr>
+            <div class="form-group">
+  <label for="comment">Comment:</label>
+  <textarea class="form-control" rows="5" id="comment"></textarea>
+            <button class="btn btn-success mt-1">Répondre</button
+            <textarea class="form-control" rows="5" id="comment"></textarea>
+    </div>
         </div>
 
         <!-- Sidebar Widgets Column -->
@@ -128,32 +99,12 @@ Forum
     </div>
     <!-- /.container -->
 
-    <!-- Page Content -->
-    <div class="container">
 
-
-
-    <div class="container-fluid hidden" id="tabFordum">
-            <div class="forumContent  my-4">
-
-                {% for message in sujet.messages %}
-                    <div class="card">
-                      <div class="card-body">
-                      <h7 class="card-title">Card title</h8>
-                        This is some text within a card body.
-                      </div>
-                    </div>
-                {% endfor %}  
-
-            </div>
-
-    </div>
 
         {#    Fin du content     #}
 
 
 {#    Fin du content general     #}
-   </div>
 
 {#        <div class="forumContent hidden" id="tabEpicerie">CECI EST MON EPICERIE</div>
         <div class="forumContent hidden" id="tabBar">CECI EST MON BAR</div>
@@ -162,5 +113,5 @@ Forum
     </div>
 
 <script src="{{ asset('build/js/jquery-3.3.1.js') }}"></script>
-<script src="{{ asset('build/js/forum.js') }}"></script>
+<script src="{{ asset('build/js/message.js') }}"></script>
 {% endblock %}
