--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -32,17 +32,23 @@
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item active">
-						<a class="nav-link" href="./">Accueil<span class="sr-only">(current)</span></a>
+						<a class="nav-link" href="{{ path('home') }}">Accueil<span class="sr-only">(current)</span></a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="./about">Le projet</a>
+						<a class="nav-link" href="{{ path('about') }}">Le projet</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="contact.html">Contact</a>
 					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="contact.html" data-toggle="modal" data-target="#loginModal">Se connecter</a>
-					</li>
+                                            {% if not app.user %}
+                                                <li class="nav-item">
+                                                    <a class="nav-link" href="contact.html" data-toggle="modal" data-target="#loginModal">Se connecter</a>
+                                                </li>
+                                            {% else %}
+                                                <li class="nav-item">
+                                                    <a class="nav-link" href="{{ path("deconnexion") }}">Déconnexion</a>
+                                                </li>
+                                            {% endif %}
 				</ul>
 			</div>
 		</div>
@@ -272,28 +278,30 @@
 						<span aria-hidden="true">&times;</span>
 					</button>
 				</div>
+                                <form class="ui form popupConnexion" action="{{ path('connexion') }}" method="POST">
 				<div class="modal-body">
 					<div class="form-group">
-						<div class="input-group">
+{#						<div class="input-group">#}
 							<div class="input-group-prepend">
 								<div class="input-group-text">email</div>
 							</div>
-							<input type="text" class="form-control" id="login" value="">
-						</div>
+							<input type="text" class="form-control" id="login" name="_username" value="">
+{#						</div>#}
 					</div>
 					<div class="form-group">
-						<div class="input-group">
+{#						<div class="input-group">#}
 							<div class="input-group-prepend">
 								<div class="input-group-text">Mot de passe</div>
 							</div>
-							<input class="form-control" type="password" id="password" value="">
-						</div>
+							<input class="form-control" type="password" name="_password" id="password" value="">
+{#						</div>#}
 					</div>
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-outline-danger" data-dismiss="modal">Annuler</button>
-					<button type="button" class="btn btn-outline-primary" onclick="checkMyName();">Valider</button>
+                                        <button type="submit" class="btn btn-outline-primary">Valider</button>
 				</div>
+                                </form>
 			</div>
 		</div>
 	</div>
