--- a/templates/about/index.html.twig
+++ b/templates/about/index.html.twig
@@ -24,7 +24,7 @@
     <div class="container">
     <nav class="navbar navbar-expand-md top-nav ">
         <div class="container">
-            <a class="navbar-brand" href="index.html"><strong>Esperluette</strong></a>
+            <a class="navbar-brand" href="index.html"><strong>& Esperluette</strong></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"><i class="fa fa-bars" aria-hidden="true"></i></span>
@@ -56,45 +56,83 @@
         <div class="container">
 
         {# - L’ÉQUIPE #}
-            <div class="row">
+            <div class="row rowAbout">
                 <div class="col">
-
+                        <h3>L’ÉQUIPE</h3>
+                        <p>L’équipe de départ est composée du conseil d’administration de l’Espiralh, de son cuisinier salarié et de trois habitants volontaires.</p>
                 </div>
             </div>
 
         {# - LE TIERS LIEU SOLIDAIRE #}
-        <div class="row">
+        <div class="row rowAbout">
                 <div class="col">
-
+                        <h3>LE TIERS LIEU SOLIDAIRE</h3>
+                        <p>Pour installer le Tiers-Lieu nous recherchons un lieu suffisamment grand pour accueillir l’ensemble des activités (100 m2), disposant d’un espace extérieur et/ou d’une vitrine et situé dans une rue passante du quartier. L’espace devra être ouvert et accessible à tous.
+                        Les tiers-lieux sont avant tout des lieux de sociabilité et d’échanges de pratiques,  susceptibles de répondre à une multiplicité de besoins et d’aspirations, et de faire naitre de nouvelles initiatives.  Ils sont des lieux de synergies susceptibles de transformer le territoire .
+                    </p>
                 </div>
             </div>
 
         {# - LE RESTAURANT/BAR #}
-        <div class="row">
+        <div class="row rowAbout">
                 <div class="col">
-
+                        <h3>LE CAFE-RESTO</h3>
+                        <p>Sur la base du fonctionnement actuel de l’Espiralh, le resto proposera un menu unique à prix libre le midi (objectif de 35 couverts /midi). La partie café ouvrira quelques soir par semaine et au moins un dimanche par mois pour proposer des formules boissons & tapas ou brunch. Des soirées et après-midi thématiques seront également proposées (enfants, jeux, concerts, débats…).</p>
+                        
+                </div>
+            </div>
+        {# - EPICERIE #}
+        <div class="row rowAbout">
+                <div class="col">
+                        <h3>L’EPICERIE COOPERATIVE ET SOLIDAIRE</h3>
+                        <p>L’épicerie sera approvisionnée par un réseau de producteurs locaux, des surplus de magasins bio, et des produits secs achetés.
+                        Elle fonctionnera grâce à la participation de ses membres qui s’impliqueront dans les différentes fonctions (achats, récupération, acheminement de marchandises, mise en rayon, gestion des stocks, accueil, comptabilité etc.)
+                        Un système de solidarité sera mis en place.</p>
                 </div>
             </div>
 
-        {# - LES ATELIERS #}
-        <div class="row">
+        {# - ESPACES #}
+        <div class="row rowAbout">
                 <div class="col">
+                        <h3>LA MUTUALISATION D’ESPACES, D’EQUIPEMENTS ET DE SAVOIR-FAIRE</h3>
+                        <p>Le tiers-lieu pourra accueillir, à différents moments de la journée et de la semaine, d’autres activités professionnelles (ex : micro-entreprise de production de conserves) ou bénévoles (ex : réunions d’associations partenaires). Le partage des connaissances et savoir faire sera favorisé.</p>
+                        
+                </div>
+            </div>
 
+
+        {# - LES ATELIERS #}
+        <div class="row rowAbout">
+                <div class="col">
+                        <h3>LES ATELIERS ET ACTIONS COLLECTIVES</h3>
+                        <p>A partir des propositions des membres, tous types d’ateliers ou actions collectives pourront avoir lieu : cuisine, repas, sorties glanage ou cueillette sauvage, fabrication de lessive, sociologie, radio, art plastique…</p>
+                        
+                </div>
+            </div>
+
+        {# - INSERTION SOCIALE #}
+        <div class="row rowAbout">
+                <div class="col">
+                        <h3>INSERTION SOCIALE ET ACCES A L’EMPLOI</h3>
+                        <p>
+                        Le projet s’appuiera sur une forte dynamique bénévole, source d’insertion sociale.
+                        En termes d’emploi, le projet contribuera à péréniser le poste de cuisinier de l’Espiralh et à créer un ou deux emplois en lien avec les activités café-resto et épicerie.
+                        Dans la continuité des activités actuelles de l’Espiralh, il pourra accueillir des stages de jeunes, de personnes en situation de handicap ou de fragilité sociale pour la découverte des métiers présents dans le lieu.</p> 
                 </div>
             </div>
 
         {# - ILS NOUS SOUTIENNENT #}
-        <div class="row">
+        <div class="row rowAbout">
                 <div class="col">
-                        <p>Ce projet est soutenu par le laboratoire Leris, un laboratoire de recherche-action indépendant de sociologie qui mène depuis deux ans une étude en Occitanie autour de l’aide alimentaire et les circuits courts. (lien vers le rapport de l’étude)
-                        Asso locales (Odette, Oaqadi, Comité de quartier)
-                        Cinéma municipal
-                        Paul (producteur bio du marché du mercredi matin)
-                        Habitants du quartier</p>
+                        <h3>ILS NOUS SOUTIENNENT</h3>
+                
+                        <p>Ce projet s’inscrit dans une démarche d’expérimentation à l’échelle de la Région Occitanie, menée par le LERIS un laboratoire de recherche-action en sciences sociales, avec le Secours Populaire et le Secours Catholique sur la lutte contre la précarité alimentaire à partir des dynamiques de transition (lien vers le rapport de l’étude).
+                        Ce projet s’appuie sur des liens forts avec les acteurs du quartier : Maison pour Tous, Association Odette Louise (projet d’EVS), le Cinéma Municipal Nestor Burma, le comité de quartier qui sollicitent déjà l’Espiralh pour des services de traiteur.
+                        Nous pouvons également compter sur la coopération de certains producteurs bio présents sur le marché du mercredi matin.
+                    </p>
                 </div>
             </div>
                 
-                Texte incomplet…
 
         </div>
     </section>
