--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -23,7 +23,7 @@
 	{% block NavBar %}
 	<nav class="navbar navbar-expand-md fixed-top top-nav">
 		<div class="container">
-			<a class="navbar-brand" href="index.html"><strong>Esperluette</strong></a>
+			<a class="navbar-brand" href="index.html"><strong>& Esperluette</strong></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
 			 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"><i class="fa fa-bars" aria-hidden="true"></i></span>
@@ -56,10 +56,10 @@
 				<img class="d-block img-fluid" alt="First slide" src="{{ asset('build/img/esperluette_2.jpg')}}">
 				<div class="carousel-caption ">
 					<h2 class="display-4 text-white mb-2 mt-4">Mieux vivre ensemble.</h2>
-					<p class="text-white mb-3 px-5 lead">Le projet est de créer (co-créer) un tiers lieu solidaire dans le quartier de Celleneuve afin de favoriser le vivre ensemble.
-                            Autour de la petite cuisine de l’Espiralh (qui propose depuis 4 ans un plat unique tous les midis à prix libre), nous souhaitons développer un lieu de partage et d’échange principalement axé autour de l’alimentation, en créant un bar de proximité et une épicerie en circuit court. 
-                            L’idée est de rassembler les habitants de Celleneuve, de leur permettre d’accéder simplement et à moindre coût à une alimentation responsable, de proposer et/ou de participer à des ateliers.
-						veniam, </p>
+					<p class="text-white mb-3 px-5 lead">Le projet est de créer (co-créer) un tiers lieu solidaire, l’Esperluette, dans le quartier de Celleneuve, afin de favoriser le vivre ensemble et l’accès de tous à une alimentation choisie et responsable.
+							Autour de la petite cuisine de l’Espiralh (qui propose depuis 4 ans un plat unique tous les midis à prix libre), nous souhaitons développer un lieu de partage et d’échange autour de l’alimentation, en créant un café-resto de quartier et une épicerie coopérative et solidaire en circuits-courts. 
+							L’idée est de rassembler les habitants de Celleneuve, appartenant aux différentes communautés et groupes sociaux, pour leur permettre d’accéder simplement et à moindre coût à une alimentation responsable, tout en leur proposant de participer à des ateliers et des actions collectives.
+							Basé sur l’implication des habitants, le fonctionnement de l’Esperluette contribuera à développer la citoyenneté, la convivialité, la solidarité et la transition alimentaire, à Celleneuve.</p>
 					<a href="./about" class="btn btn-primary btn-capsul px-4 py-2">En savoir plus</a>
 				</div>
 			</div>
